buildscript {
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
    }
}

plugins {
    id "org.jetbrains.kotlin.jvm"            version "${kotlinVersion}"
    id "org.jetbrains.kotlin.plugin.spring"  version "${kotlinVersion}"
    id "org.jetbrains.kotlin.plugin.allopen" version "${kotlinVersion}"
    id "org.springframework.boot"            version "${springBootVersion}"
    id "io.spring.dependency-management"     version "${dependencyManagementVersion}"
    id "io.gitlab.arturbosch.detekt"         version "${detektVersion}"
}

apply plugin: 'io.spring.dependency-management'
apply plugin: 'kotlin'
apply plugin: 'java'
apply plugin: "io.gitlab.arturbosch.detekt"

java.sourceCompatibility = JavaVersion.VERSION_1_8

// Separando dependencias para outro arquivo.
apply from: 'dependencies.gradle'

repositories {
    mavenCentral()
    gradlePluginPortal()
    mavenLocal()
}

compileKotlin {
    kotlinOptions {
        freeCompilerArgs += "-Xjsr305=strict"
        jvmTarget = "1.8"
    }
}

compileTestKotlin {
    kotlinOptions {
        freeCompilerArgs += "-Xjsr305=strict"
        jvmTarget = "1.8"
    }
}

test {
    useJUnitPlatform()
    ignoreFailures = false
    jvmArgs = ["-Duser.timezone=America/Sao_Paulo",
               "-XX:+UnlockExperimentalVMOptions",
               "-XX:+UseCGroupMemoryLimitForHeap"]
}

sourceSets {
    main {
        java.srcDir("src/main/kotlin")
    }
    test {
        java.srcDir("src/test/kotlin")
    }
}

detekt {
    toolVersion = detektVersion
    config = files("$projectDir/config/detekt.yml")
    autoCorrect = true
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

